force-app/main/default/objects/Zumzum__Sales_Invoice_Line_Item__c/Zumzum__Sales_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Sales Invoice Line Item</label>
    <nameField>
        <label>Sales Invoice Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>