force-app/main/default/objects/Zumzum__Sales_Invoice_Line_Item__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Course__c.Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filterItems>
        <infoMessage>Only courses with &#39;Final&#39; type are available.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
    <relationshipName>Sales_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>