force-app/main/default/objects/Zumzum__Sales_Invoice_Line_Item__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <formula>IF(ISPICKVAL(Zumzum__Sales_Invoice__r.Zumzum__Type__c, &apos;Sales Credit&apos;), -1 * Zumzum__Total_Gross__c, Zumzum__Total_Gross__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>