force-app/main/default/objects/Zumzum__Sales_Invoice_Line_Item__c/fields/Zumzum__Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Sales_Invoice__c</fullName>
    <label>Sales Invoice</label>
    <referenceTo>Zumzum__Sales_Invoice__c</referenceTo>
    <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
    <relationshipName>Sales_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>